// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoutModal: Component should be hidden 1`] = `
<Styled(Modal)
  contentLabel="Confirm Logout"
  isOpen={false}
  style={
    Object {
      "content": Object {
        "WebkitOverflowScrolling": "touch",
        "alignItems": "center",
        "border": null,
        "borderRadius": "4px",
        "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
        "display": "flex",
        "flexDirection": "column",
        "left": "50%",
        "maxWidth": "600px",
        "outline": "none",
        "overflow": "auto",
        "position": "absolute",
        "right": "10px",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": "calc(100% - 20px)",
      },
      "overlay": Object {
        "backgroundColor": "rgba(29, 29, 32, 0.75)",
        "bottom": 0,
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 10000,
      },
    }
  }
>
  <Styled(H1)>
    <FormattedMessage
      defaultMessage="Are you sure you want to log out?"
      id="shared.components.logoutModal.title"
    />
  </Styled(H1)>
  <styled.div>
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="shared.components.logoutModal.cancel"
      />
    </BackButton>
    <ConfirmLink
      onClick={[Function]}
      to="redirectUrl"
    >
      <FormattedMessage
        defaultMessage="Confirm"
        id="shared.components.logoutModal.confirm"
      />
    </ConfirmLink>
  </styled.div>
</Styled(Modal)>
`;

exports[`LogoutModal: Component should render correctly 1`] = `
<Styled(Modal)
  contentLabel="Confirm Logout"
  isOpen={true}
  style={
    Object {
      "content": Object {
        "WebkitOverflowScrolling": "touch",
        "alignItems": "center",
        "border": null,
        "borderRadius": "4px",
        "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
        "display": "flex",
        "flexDirection": "column",
        "left": "50%",
        "maxWidth": "600px",
        "outline": "none",
        "overflow": "auto",
        "position": "absolute",
        "right": "10px",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": "calc(100% - 20px)",
      },
      "overlay": Object {
        "backgroundColor": "rgba(29, 29, 32, 0.75)",
        "bottom": 0,
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 10000,
      },
    }
  }
>
  <Styled(H1)>
    <FormattedMessage
      defaultMessage="Are you sure you want to log out?"
      id="shared.components.logoutModal.title"
    />
  </Styled(H1)>
  <styled.div>
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="shared.components.logoutModal.cancel"
      />
    </BackButton>
    <ConfirmLink
      onClick={[Function]}
      to="redirectUrl"
    >
      <FormattedMessage
        defaultMessage="Confirm"
        id="shared.components.logoutModal.confirm"
      />
    </ConfirmLink>
  </styled.div>
</Styled(Modal)>
`;
